# mutation_game

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  main.py  pyproject.toml  test_mutation.py
.github/workflows/: publish.yml
docs/: api.rst  background.rst  classification_proof.rst  code.rst  conf.py  explorations.rst  generate_images.py  getting_started.rst  index.rst  mathematics.rst  platonic_solids.rst  requirements.txt  singularities.md  singularities.rst  type_a.rst  type_b.rst  type_c.rst  type_d.rst  type_e.rst  type_fg.rst  weyl_groups.rst
docs/_static/: platonic_viewer.html  roots_viewer.html
src/mutation_game/: __init__.py  mutation.py  singularity.py
