[project]
name = "mutation-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
]

[dependency-groups]
dev = [
    "ipython>=9.10.1",
    "pytest>=9.0.2",
    "sphinx>=9.0.4",
    "sphinx-rtd-theme>=3.1.0",
]
