[project]
name = "mutation-game"
version = "0.1.2"
description = "Root system explorer via the combinatorial mutation game on graphs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Andrea Cortis" },
]
keywords = ["root-systems", "lie-algebras", "dynkin-diagrams", "weyl-group", "mutation-game"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.24",
    "networkx>=3.0",
    "matplotlib>=3.7",
]

[project.urls]
Homepage = "https://github.com/andreacortis/mutation_game"
Documentation = "https://mutation-game.readthedocs.io/en/latest/"
Repository = "https://github.com/andreacortis/mutation_game"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mutation_game"]

[dependency-groups]
dev = [
    "ipython>=9.10.1",
    "pytest>=9.0.2",
    "sphinx>=9.0.4",
    "sphinx-rtd-theme>=3.1.0",
    "yt-dlp>=2026.3.17",
]

[tool.pytest.ini_options]
testpaths = ["."]
